# audius-protocol

./: '  .cursorrules  .dockerignore  .env  .env.prod  .env.production  .env.stage  .env.staging  .env.staging.stash  .gitignore  .npmrc  .pre-commit-config.yaml  .ruby-version  .svgrrc.js  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  audius.code-workspace  buf.gen.yaml  check_secrets.sh  configureLocalEnv.js  craco.config.ts  crytic-config.json  diff.sh  docker-compose.blockchain.yml  docker-compose.comms.yml  docker-compose.creator.yml  docker-compose.dev.yml  docker-compose.discovery.yml  docker-compose.identity.yml  docker-compose.m1.build.yml  docker-compose.m1.test.yml  docker-compose.m1.yml  docker-compose.storagev2.yml  docker-compose.test.yml  docker-compose.yml  (+21 more)
identity-service/src/audius-poc-contract/cli/: Cargo.toml
identity-service/src/audius-poc-contract/cli/src/: main.rs
solana-programs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cacheLedger  Dockerfile.dev  Dockerfile.m1  README.md  init.sh  start.sh  stop.sh
solana-programs/anchor/audius-data/: .eslintrc  .eslintrc.js  .gitignore  Anchor.toml  README.md  package.json  rollup.config.js  tsconfig.json
solana-programs/anchor/audius-data/cli/: README.md  main.ts  test.sh
solana-programs/anchor/audius-data/lib/: constants.ts  lib.ts  utils.ts
solana-programs/anchor/audius-data/migrations/: deploy.ts
solana-programs/anchor/audius-data/programs/audius-data/: Cargo.toml
solana-programs/anchor/audius-data/scripts/: build-dev.sh  install-dev-dependencies.sh  parse-tx.sh  seed-tx.sh  test.sh
solana-programs/anchor/audius-data/tests/: audius-data.ts  follows.ts  playlist-social-actions.ts  playlist.ts  social-action.ts  test-helpers.ts  track-social-actions.ts  ursm.ts  user-social-actions.ts  utils.ts
solana-programs/audius_eth_registry/: Cargo.toml
solana-programs/audius_eth_registry/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-programs/audius_eth_registry/tests/: tests.rs
solana-programs/claimable-tokens/: README.md
solana-programs/claimable-tokens/cli/: Cargo.toml
solana-programs/claimable-tokens/cli/src/: main.rs
solana-programs/claimable-tokens/program/: Cargo.toml  README.md
solana-programs/claimable-tokens/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-programs/claimable-tokens/program/src/utils/: mod.rs  program.rs
solana-programs/claimable-tokens/program/tests/: tests.rs
solana-programs/cli/: Cargo.toml
solana-programs/cli/src/: main.rs
solana-programs/create_and_verify/: Cargo.toml
solana-programs/create_and_verify/src/: error.rs  instruction.rs  lib.rs  processor.rs
solana-programs/create_and_verify/tests/: tests.rs
solana-programs/crowdfund/: Anchor.toml  package.json
solana-programs/crowdfund/programs/crowdfund/: Cargo.toml  devnet.id.json
solana-programs/crowdfund/programs/crowdfund/src/: lib.rs
solana-programs/crowdfund/tests/: crowdfund.ts
solana-programs/fixtures/: aao-sender.json  cn1-sender.json  cn2-sender.json  cn3-sender.json  cn4-sender.json  dn1-sender.json  eth-registry-signer-group.json  eth-registry-valid-signer.json  fee-payer.json  owner-usdc.json  owner.json  reward-manager-lookup-table.json  reward-manager-state.json  reward-manager-tokens.json  usdc.json  waudio.json
solana-programs/hack/: README.md  build.sh  docker-compose.yml  m1shim.sh  pipe.py
solana-programs/payment-router/: Anchor.toml  README.md  package.json
solana-programs/payment-router/programs/payment-router/: Cargo.toml
solana-programs/payment-router/programs/payment-router/src/: constant.rs  error.rs  lib.rs  router.rs  utils.rs
solana-programs/payment-router/programs/payment-router/tests/: tests.rs
solana-programs/payment-router/scripts/: setupTestEnv.sh  testCreatePaymentRouterBalanceAta.sh  testCreatePaymentRouterBalancePda.sh  testRoute.sh  testRouteAudio.sh  testRouteUsdc.sh
solana-programs/payment-router/tests/: constants.ts  payment-router.ts  utils.ts
solana-programs/program/: Cargo.toml
solana-programs/program/src/: error.rs  instruction.rs  lib.rs
solana-programs/program/tests/: tests.rs
solana-programs/reward-manager/: .gitignore  Cargo.toml  README.md
solana-programs/reward-manager/cli/: COMMANDS.md  Cargo.toml  test1.json  test_signers.json
solana-programs/reward-manager/cli/src/: main.rs  utils.rs
solana-programs/reward-manager/program/: Cargo.toml
solana-programs/reward-manager/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
solana-programs/reward-manager/program/src/state/: mod.rs  reward_manager.rs  sender_account.rs  verified_messages.rs
solana-programs/reward-manager/program/src/utils/: mod.rs  signs.rs
solana-programs/reward-manager/program/tests/: add_sender.rs  assert.rs  change_reward_manager_authority.rs  create_sender.rs  create_sender_public.rs  delete_sender.rs  delete_sender_decentralized.rs  delete_sender_public.rs  delete_sender_with_senders_poof.rs  init_reward_manager.rs  transfer.rs  utils.rs  verify_transfer_signature.rs
solana-programs/scripts/: build.sh  deploy.sh  init-dev-fixtures.sh  init.sh  install-solana.sh  setup-predeployed.sh  update-keys.sh
solana-programs/staking-bridge/: .gitignore  Anchor.toml  README.md  package.json
solana-programs/staking-bridge/programs/staking-bridge/: Cargo.toml
solana-programs/staking-bridge/programs/staking-bridge/src/: constant.rs  error.rs  lib.rs  (+5 more)
solana-programs/staking-bridge/scripts/: redeem.ts  redeemWormholeTokens.ts  setupCluster.sh  testCreatePda.sh  testCreateStakingBridgeBalanceAtas.sh  testCreateStakingBridgeBalancePda.sh  testRaydiumSwap.sh  testWormholeTransfer.sh
solana-programs/staking-bridge/tests/: constants.ts  raydiumTestUtils.ts  staking-bridge.ts  wormholeTestUtils.ts
solana-programs/track_listen_count/: Cargo.toml
solana-programs/track_listen_count/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana-programs/track_listen_count/tests/: tests.rs
(+11058 files in other folders)
