[workspace]
members = [
	"audius_eth_registry",
	"claimable-tokens/cli",
	"claimable-tokens/program",
	"cli",
	"reward-manager/cli",
	"reward-manager/program",
	"track_listen_count",
]

[profile.dev]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
