[package]
name = "audius-eth-registry-cli"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
solana-account-decoder = "=1.16.27"
solana-clap-utils = "=1.16.27"
solana-cli-config = "=1.16.27"
solana-client = "=1.16.27"
solana-logger = "=1.16.27"
solana-sdk = "=1.16.27"
solana-program = "=1.16.27"
hex = "0.4.3"
libsecp256k1 = "0.6.0"
sha3 = "0.9.1"
borsh = "0.9.0"
audius_eth_registry = { path="../audius_eth_registry", features = [ "no-entrypoint" ] }
