[package]
name = "claimable-tokens-cli"
version = "0.1.0"
description = "CLI tools for transfer fund from associated ethereum account to another one"
edition = "2018"

[dependencies]
clap = "2.33.3"
solana-cli-config = "=1.16.27"
solana-clap-utils = "=1.16.27"
solana-logger = "=1.16.27"
solana-client = "=1.16.27"
solana-sdk = "=1.16.27"
solana-program = "=1.16.27"
borsh = "0.9.0"
anyhow = "1.0.40"
claimable-tokens = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
libsecp256k1 = "0.6.0"
spl-associated-token-account = "1.0.2"
hex = "0.4.3"
