[package]
name = "audius-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
solana-account-decoder = "1.7.3"
solana-clap-utils = "1.7.3"
solana-cli-config = "1.7.3"
solana-client = "1.7.3"
solana-logger = "1.7.3"
solana-sdk = "1.7.3"
solana-program = "1.7.3"
borsh = "0.8.2"
regex = "1.5.4"
bincode = "1.3.1"
serde = "1.0.55"
csv = "1.1.6"
hex = "0.4.3"
sha3 = "0.9.1"
libsecp256k1 = "0.3.5"
audius-reward-manager = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
claimable-tokens = { git="https://github.com/atticwip/claimable-tokens.git", features = [ "no-entrypoint" ] }

[[bin]]
name = "audius-cli"
path = "src/main.rs"
