[package]
name = "audius-reward-manager-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
solana-account-decoder = "=1.16.27"
solana-clap-utils = "=1.16.27"
solana-cli-config = "=1.16.27"
solana-client = "=1.16.27"
solana-logger = "=1.16.27"
solana-sdk = "=1.16.27"
solana-program = "=1.16.27"
borsh = "0.8.2"
regex = "1.5.4"
bincode = "1.3.1"
serde = "1.0.55"
csv = "1.1.6"
hex = "0.4.3"
sha3 = "0.9.1"
libsecp256k1 = "0.6.0"
audius-reward-manager = { path="../program", features = [ "no-entrypoint" ] }
spl-token = { version = "=3.2.0", features = ["no-entrypoint"] }
claimable-tokens = { path = "../../claimable-tokens/program", features = [ "no-entrypoint" ] }
