[package]
name = "audius-cli"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
solana-account-decoder = "1.5.3"
solana-clap-utils = "1.5.3"
solana-cli-config = "1.5.3"
solana-client = "1.5.3"
solana-logger = "1.5.3"
solana-sdk = "1.5.0"
solana-program = "1.5.1"
hex = "0.4.2"
libsecp256k1 = "0.3.5"
sha3 = "0.9.1"
audius = { path="../program", features = [ "no-entrypoint" ] }

[[bin]]
name = "audius"
path = "src/main.rs"