[package]
name = "payment-router"
version = "0.1.0"
description = "This program transfer SOL AUDIO or SOL USDC from its PDA token account to given recipients."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
