[package]
name = "payment-router"
version = "0.1.0"
description = "This program transfers SOL AUDIO or SOL USDC from its PDA token account to given recipients."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payment_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-security-txt = "1.1.1"
getrandom = { version = "0.2.9", features = ["custom"] }
