[package]
name = "staking-bridge"
version = "0.1.0"
description = "This program had 2 main functions: it swaps SOL USDC to SOL AUDIO tokens using Raydium, and it converts SOL AUDIO to ETH AUDIO using the Wormhole Token Bridge."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
hex = "0.4"
solana-program = "=1.16.9"
solana-security-txt = "1.1.1"
